--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -113,7 +113,7 @@
     "wen-token": "Umbra 有代币吗？",
     "wen-token-answer": "没有。",
     "how-does-it-work": "它是如何工作的？",
-    "how-does-it-work-answer": "<p>下面是对 Umbra 工作原理的简介：</p><ol><li>在设置您的 Umbra 帐户时，用户会签署一条消息。此消息的散列用于生成两个私钥——一个“支出密钥”和一个“查看密钥”。 </li> <li>相应的公钥都作为与您的地址关联的记录在链上发布。</li><li>付款人使用您的地址或 ENS 名称来查找您的两个公钥。另外，付款人生成一个随机数。</li><li>随机数与支出公钥一起使用，以生成一个“隐形地址”来发送资金。与查看公钥使用相同的随机数来加密随机数。</li><li> 使用 Umbra 合约，付款人将资金发送到隐身地址，加密数据作为 <span class=\"code\">Announcement</span>  事件发出。</li><li>接收方扫描 Umbra 合约中的所有 <span class=\"code\">Announcement</span> 事件。对于每个人，他们使用他们的查看密钥来解密随机数，然后将该数字乘以他们的支出密钥来生成隐形私钥。如果隐形私钥控制资金发送到的地址，则这笔款项是给收款人的。</li> <li> 接收方现在可以使用私钥直接将提取资金所需的交易发送到另一个地址，或者签署元交易以让中继器处理取款请求。</li></ol>",
+    "how-does-it-work-answer": "<p>下面是对 Umbra 工作原理的简介：</p><ol><li>在设置您的 Umbra 帐户时，用户会签署一条消息。此消息的散列用于生成两个私钥: 一个“支出密钥”和一个“查看密钥”。 </li> <li>相应的公钥都作为与您的地址关联的记录在链上发布。</li><li>付款人使用您的地址或 ENS 名称来查找您的两个公钥。另外，付款人生成一个随机数。</li><li>随机数与支出公钥一起使用，以生成一个“隐形地址”来发送资金。与查看公钥使用相同的随机数来加密随机数。</li><li> 使用 Umbra 合约，付款人将资金发送到隐身地址，加密数据作为 <span class=\"code\">Announcement</span>  事件发出。</li><li>接收方扫描 Umbra 合约中的所有 <span class=\"code\">Announcement</span> 事件。对于每个人，他们使用他们的查看密钥来解密随机数，然后将该数字乘以他们的支出密钥来生成隐形私钥。如果隐形私钥控制资金发送到的地址，则这笔款项是给收款人的。</li> <li> 接收方现在可以使用私钥直接将提取资金所需的交易发送到另一个地址，或者签署元交易以让中继器处理取款请求。</li></ol>",
     "how-does-it-work-see-the": "请参阅 {0} 部分了解更多详情。",
     "how-does-it-work-technical-dtails": "“技术细节：它是如何工作的？“",
     "how-private": "Umbra 有多私密？",
@@ -139,12 +139,12 @@
     "umbra-fee": "为什么有时会有 Umbra 费用？",
     "umbra-fee-answer": "<p> 您通过 Umbra 收到的资金需要扫描所有已发送的交易，然后检查每笔交易以找到属于您的交易。 </p> <p> 在交易费用非常便宜的网络上，Umbra 合约在发送资金交易时以阻止垃圾信息收取少量费用，因为垃圾信息会使扫描所有发送的交易变得更加困难。 </p>",
     "payment-links": "什么是支付链接？",
-    "payment-links-answer": " <p> 在发送页面上，填写部分或全部发送表单，然后单击 <span class=\"text-italic\">复制付款链接</span> 按钮。这会将 URL 复制到剪贴板，当访问该剪贴板时，会使用 URL 中的值预先填充发送表单。 </p> <p> 指定金额作为付款链接的一部分时要小心，因为它会降低隐私。例如，如果您分享了一个支付链接，人们可以向您捐赠 100 DAI，突然间大量 100 DAI 开始通过 Umbra，观察者就会知道这些转账很可能是属于您的。 </p>",
+    "payment-links-answer": " <p> 在发送页面上，填写部分或全部发送表单，然后单击<span class=\"text-italic\">复制付款链接</span>按钮。这会将 URL 复制到剪贴板，当访问该剪贴板时，会使用 URL 中的值预先填充发送表单。 </p> <p> 指定金额作为付款链接的一部分时要小心，因为它会降低隐私。例如，如果您分享了一个支付链接，人们可以向您捐赠 100 DAI，突然间大量 100 DAI 开始通过 Umbra，观察者就会知道这些转账很可能是属于您的。 </p>",
     "receiving-funds": "收款",
     "safe-address": "提取资金到哪些地址是安全的？",
     "safe-address-answer": "<p> 我们建议以保护隐私的方式取款3 种方式。请注意，每个都有自己的权衡取舍。 </p> <ol> <li> 提取到与您的身份没有公开关联的地址（权衡：发件人现在可以推断您控制该地址） </li> <li> 生成一个新地址并提取到该地址（权衡：如果您收到了代币，则必须先用 ETH 为该地址注资，然后才能使用它们） </li> <li> 提取到交易所地址（权衡：如果你取款到 Coinbase，那么 Coinbase 会知道谁给您发了资金） </li> </ol>",
     "non-safe-address": "提取资金到哪些地址不安全？",
-    "non-safe-address-answer": "<p> 取款时要考虑的风险是，如果您提取到与某些公开身份相关联的地址，那么隐私将丢失如下： </p> <p> 假设 Alice 通过 Umbra 向 Bob 发送资金。现在，只有 Alice 和 Bob 知道 Alice 付钱给 Bob。任何其他观察者都知道 Alice 向某人发送了资金，但他们不知道那个人是谁。 </p> <p> 如果 Bob 将这些资金提取到他公开的bob.eth地址，该地址解析为0x123...def，那么观察者知道发生了以下两件事之一： </p> <ol> <li>场景 1：Alice 向 Bob 发送资金，然后 Bob 将资金提取到他自己的地址，或者</li> <li>场景 2：Alice 向认识 Bob 的人发送资金，并从他们的隐身地址支付 Bob</li> </ol> <p> 此外，考虑 Bob 通过直接向他的朋友 Charlie 支付款项而取款的情况——Charlie 现在知道 Alice 向 Bob 支付了款项。 </p> <p>为了帮助缓解这种情况，如果您输入的提款地址可能会降低您的隐私，Umbra 应用程序会尝试警告您。因此，如果应用检测到您正在提款到以下地址，您会看到警告： </p> <ol> <li>有 ENS 或 CNS 名称</li> <li>拥有 POAP 代币</li> <li>是您登录的钱包</li> <li>（即将推出）：提取到对 Gitcoin 有贡献的地址。</li> </ol> <p> 这些 <span class=\"text-bold\">不是</span> 所有潜在危险提款地址的完整列表，因此请谨慎使用。 </p>",
+    "non-safe-address-answer": "<p> 取款时要考虑的风险是，如果您提取到与某些公开身份相关联的地址，那么隐私将丢失如下： </p> <p> 假设 Alice 通过 Umbra 向 Bob 发送资金。现在，只有 Alice 和 Bob 知道 Alice 付钱给 Bob。任何其他观察者都知道 Alice 向某人发送了资金，但他们不知道那个人是谁。 </p> <p> 如果 Bob 将这些资金提取到他公开的bob.eth地址，该地址解析为0x123...def，那么观察者知道发生了以下两件事之一： </p> <ol> <li>场景 1：Alice 向 Bob 发送资金，然后 Bob 将资金提取到他自己的地址，或者</li> <li>场景 2：Alice 向认识 Bob 的人发送资金，并从他们的隐身地址支付 Bob</li> </ol> <p> 此外，考虑 Bob 通过直接向他的朋友 Charlie 支付款项而取款的情况——Charlie 现在知道 Alice 向 Bob 支付了款项。 </p> <p>为了帮助缓解这种情况，如果您输入的提款地址可能会降低您的隐私，Umbra 应用程序会尝试警告您。因此，如果应用检测到您正在提款到以下地址，您会看到警告： </p> <ol> <li>有 ENS 或 CNS 名称</li> <li>拥有 POAP 代币</li> <li>是您登录的钱包</li> <li>（即将推出）：提取到对 Gitcoin 有贡献的地址。</li> </ol> <p> 这些<span class=\"text-bold\">不是</span>所有潜在危险提款地址的完整列表，因此请谨慎使用。 </p>",
     "umbra-withdrawal": "Umbra 能否以保护隐私的方式更轻松地提取资金？",
     "umbra-withdrawal-answer": "<p> 是的！这是我们打算在未来进行许多改进的领域，主要是依靠 Umbra 的提款后挂钩功能。 </p> <p>我们计划如何利用这一点的一些示例包括：</p> <ol> <li>直接提取到 Tornado Cash</li> <li>以原子方式将一些代币交换为 ETH，并将其全部发送到新地址</li> <li>将资金直接提取到 DeFi 协议中</li> </ol> <p> 我们可以通过钩子追求许多其他选项，以极大地扩展隐私保护取款选项。 </p>",
     "scan-time": "为什么扫描我的资金需要这么长时间？",
@@ -164,7 +164,7 @@
     "umbra-risk": "Umbra 的风险是什么？",
     "umbra-risk-answer": "<p> 和其他货币生态系统中的软件一样，使用 Umbra 也存在风险。这包括严重的软件漏洞，黑客攻击、或其他恶意行为者攻击的风险。任何或所有这些情况都可能导致资金损失。 </p> <p>更具体地说，以下是我们过去在其他项目中看到的一些风险：</p> <ol> <li>合同漏洞使攻击者窃取合同资金或使资金冻结</li> <li>我们的链下代码中的一个错误导致资金被发送到一个不可恢复的地址</li> <li>DNS被劫持以窃取用户的私钥</li> <li>前端代码供应链攻击窃取用户私钥</li> </ol> <p> 我们正在努力防止这些风险，但这并不意味着我们会成功。Umbra 不提供任何担保，您应自担风险下使用它。 </p>",
     "crypto-js": "JavaScript 中的密码学是否安全？",
-    "crypto-js-answer": " <p> 一般来说，JavaScript 执行环境并不适合满足安全要求。它在将秘密数据隐藏在内存中（例如，您的应用程序特定的私钥）和防止该数据写入磁盘方面提出了挑战。使用 JavaScript 还意味着底层加密库可能容易受到诸如 {timing-attacks}。 Umbra 使用 {noble-secp256k1} 进行所有加密，您可以阅读有关其限制和缓解此类漏洞的更多信息，看 {here}。",
+    "crypto-js-answer": "一般来说，JavaScript 执行环境并不适合满足安全要求。它在将秘密数据隐藏在内存中（例如，您的应用程序特定的私钥）和防止该数据写入磁盘方面提出了挑战。使用 JavaScript 还意味着底层加密库可能容易受到诸如 {timing-attacks}。 Umbra 使用 {noble-secp256k1} 进行所有加密，您可以阅读有关其限制和缓解此类漏洞的更多信息，看 {here}。",
     "crypto-js-timing-attacks": "定时攻击",
     "crypto-js-here": "这里",
     "crypto-js-answer-rest": "</p> <p> 然而，以太坊生态系统有许多依赖 JavaScript 密码术的钱包和应用程序，到目前为止还没有因此而出现重大问题，因此这种方法对于大多数用户来说可能是一个合适的折衷方案。 </p>",
@@ -200,9 +200,86 @@
     "receive-vkey-answer": "<p> 目前，唯一的方法是使用 <span class=\"code\">Umbra.generatePrivateKeys()</span>请求用户签名，这将返回他们的消费密钥和查看密钥。您可以丢弃支出密钥而不使用它。执行此操作的示例片段如下： </p> <div class=\"text-caption bg-muted q-pa-md\"> <div class=\"code code-grey\">// 导入 Umbra 类</div> <div class=\"code code\"> <span class=\"code-blue\">import </span> <span class=\"text-grey\">{</span> Umbra <span class=\"text-grey\">} </span> <span class=\"code-blue\">from</span> <span class=\"code-green\">'@umbra/umbra-js'</span>; </div> <br /> <div class=\"code code-grey\">// 用户连接他们的钱包后把`signer`设为ethers JsonRpcSigner</div> <div class=\"code code-grey\">// 下面的行将从用户那里要求签名，</div> <div class=\"code code-grey\">// 计算他们的消费和查看键，但是</div> <div class=\"code code-grey\">// 只将查看的 KeyPair 实例返回给调用者。</div> <div class=\"code code\"> <span class=\"code-blue\">const </span> <span class=\"text-grey\">{</span> viewingKeyPair <span class=\"text-grey\">}</span> = <span class=\"code-blue\">await</span> Umbra.<span class=\"code-pink\" >generatePrivateKeys</span >(signer); </div> </div>",
     "hooks": "什么是 Hooks 以及如何使用它们？",
     "hooks-answer": "如果您熟悉 {0} 或者其他类似的标准，你已经熟悉了钩子（Hooks）的概念。 除了被调用方法的核心逻辑之外，钩子还允许调用者执行其他操作。在 ERC-777 的情况下，在将代币转移到合同后，可以使用转移挂钩来调用合同上的方法。",
-    "hooks-answer-rest": "<p> Umbra 的工作方式类似——当从合约中提取资金时——用户可能希望将它们直接存入 Tornado，或者将他们的 DAI 换成 ETH。Hooks 让你可以做到这一点。 </p> <p>您会注意到 Umbra 合约公开了多种提款方法。首先我们有：</p> <ol> <li><span class=\"code\">withdrawToken()</span>用于标准提款，即简单转账</li> <li> <span class=\"code\">withdrawTokenOnBehalf()</span> 具有与 <span class=\"code\">withdrawToken()</span>相同的功能 ，但允许中继者代表您提交提款以支持元交易。</li> </ol> <p>然后我们有两个钩子方法：</p> <ol> <li> <span class=\"code\">withdrawTokenAndCall()</span> 类似于 <span class=\"code\">withdrawToken()</span>, but ，但允许你传入合约的地址和调用该合约的数据。</li> <li> <span class=\"code\">withdrawTokenAndCallOnBehalf()</span> 类似于 <span class=\"code\">withdrawTokenOnBehalf()</span>，但也允许您传入合约地址和调用该合约的数据。 </li> </ol> <p> 要使用钩子，首先需要编写和部署符合 <span class=\"code\">IUmbraHookReceiver</span> 接口的钩子合约。这需要合约实现一个调用 <span class=\"code\">tokensWithdrawn()</span> 的方法，该方法需要一些参数。此合约的地址将作为上述方法中  <span class=\"code\">_hook</span> 输入的值传递。 </p>",
-    "hooks-answer-encode-data": "<p> 然后你需要对钩子合约将接收并可以操作的调用数据进行编码。见 ethers.js 文档的 {0} 部分以获取有关如何编码函数数据的信息。</p> ",
+    "hooks-answer-rest": "<p> Umbra 的工作方式类似——当从合约中提取资金时——用户可能希望将它们直接存入 Tornado，或者将他们的 DAI 换成 ETH。Hooks 让你可以做到这一点。 </p> <p>您会注意到 Umbra 合约公开了多种提款方法。首先我们有：</p> <ol> <li><span class=\"code\">withdrawToken()</span>用于标准提款，即简单转账</li> <li> <span class=\"code\">withdrawTokenOnBehalf()</span> 具有与 <span class=\"code\">withdrawToken()</span>相同的功能 ，但允许中继者代表您提交提款以支持元交易。</li> </ol> <p>然后我们有两个钩子方法：</p> <ol> <li> <span class=\"code\">withdrawTokenAndCall()</span> 类似于 <span class=\"code\">withdrawToken()</span>, but ，但允许你传入合约的地址和调用该合约的数据。</li> <li> <span class=\"code\">withdrawTokenAndCallOnBehalf()</span> 类似于 <span class=\"code\">withdrawTokenOnBehalf()</span>，但也允许您传入合约地址和调用该合约的数据。 </li> </ol> <p> 要使用钩子，首先需要编写和部署符合 <span class=\"code\">IUmbraHookReceiver</span> 接口的钩子合约。这需要合约实现一个调用 <span class=\"code\">tokensWithdrawn()</span> 的方法，该方法需要一些参数。此合约的地址将作为上述方法中  <span class=\"code\">_hook</span> 输入的值传递。",
+    "hooks-answer-encode-data": " 然后你需要对钩子合约将接收并可以操作的调用数据进行编码。见 ethers.js 文档的 {0} 部分以获取有关如何编码函数数据的信息。</p> ",
     "hooks-answer-encoding-data": "编码数据",
     "hooks-answer-end": "<p> 这些就是您了解钩子所需的知识。有了钩子合约的地址和编码的调用数据，您就可以调用两个基于钩子的方法之一了。 </p>"
+  },
+  "AccountRT": {
+    "processing-results": "Processing results...",
+    "configure-umbra": "You won't be able to receive funds until you've configured Umbra.",
+    "navigate-to-setup": "Please navigate to the {0} page and do so",
+    "setup": "Setup",
+    "keys-dont-match": "The stealth keys published for this account do not match those generated by it. Please navigate to the {0} page and complete the setup flow to ensure the keys published match this account. Failure to do so may result in payments sent to your account being difficult, or even impossible, to withdraw.",
+    "learn-more": "Learn more",
+    "scan-settings": "Change scan settings",
+    "account-empty": "This account has not received any funds",
+    "received-funds": "Received Funds",
+    "sender": "Sender",
+    "stealth-receiver": "Stealth Receiver",
+    "received": "Received",
+    "withdrawn": "Withdrawn",
+    "hide": "Hide",
+    "withdraw": "withdraw",
+    "receiver": "Receiver",
+    "scanning-complete": "Scanning completed successfully",
+    "custom-prv-key": " with custom private key",
+    "scanned-from-block": "Scanned from block",
+    "to": "to",
+    "all-blocks-scanned": "All blocks have been scanned",
+    "scanned-all-blocks-up-to": "Scanned all blocks up to",
+    "to-current-block": "to current block",
+    "private-key-copied": "Private key copied to clipboard",
+    "date-received": "Date Received",
+    "amount": "Amount",
+    "wallet-not-connected": "Wallet not connected. Try refreshing the page and connect your wallet",
+    "address-copied": "address copied to clipboard",
+    "umbra-instance-not-found": "Umbra instance not found",
+    "provider-not-found": "Provider not found",
+    "no-announcement-selected": "No announcement is selected for withdraw",
+    "signer-or-provider-not-found": "Signer or provider not found",
+    "fee-not-set": "Fee is not set",
+    "invalid-chain-id": "Invalid chainID",
+    "relayed-with-tx-hash": "Relayed with transaction hash",
+    "relayed-with-relayer-id": "Relayed with relayer ID",
+    "withdraw-succcessful-receipt": "Withdraw successful. Receipt:",
+    "receiver-tool-tip": "The stealth address which received these funds. It looks like an empty address, and it can't be tied to your account, but only you have the ability to generate its private key."
+  },
+  "AccountRTW": {
+    "withdrawal-warning": "You are withdrawing to {destinationAddr}, which has the following warnings:",
+    "withdrawal-warning-rest": "<span class=\"text-bold\">Continuing with withdrawal is not recommended</span> unless you know what you are doing, as this may reduce or entirely remove the privacy properties provided by Umbra.",
+    "learn-more": "Learn More"
+  },
+  "AccountRTWC": {
+    "confirm": "Confirm Withdrawal",
+    "to": "Withdrawing to",
+    "amount": "Amount",
+    "tx-fee": "Transaction Fee",
+    "relayer-gas-fee": "Relayer Gas Fee",
+    "you-will-receive": "You'll receive",
+    "cannot-withdraw": "Cannot withdraw, please correct fee error",
+    "withdraw-in-progress": "Withdraw in progress...",
+    "view-transaction": "View transaction"
+  },
+  "Argent": {
+    "warning": "Warning: Argent Compatibility Issues",
+    "warning-paragraph": "<p class=\"text-bold\"> Umbra is not compatible with Argent's standard security model. While you can still use Umbra with Argent, you are at risk of losing funds if you switch devices or have to rely on social recovery without first withdrawing any funds sent to you via Umbra. </p> <p> Umbra works by generating app-specific keys derived from your wallet's private key. Argent is unique in that its security does not rely on your private key. This is good in many ways. </p> <p>When using Umbra, however, you must be aware of the following:</p> <ol> <li> If you recover your Argent wallet onto a new device, the new wallet will have the same address but a different private key. Unless you have access to the old device, funds sent via Umbra that you have not withdrawn will become unrecoverable. </li> <br /> <li> As a result, when you get a new device, you should withdraw all funds first using your old device, then repeat the Umbra account setup and re-publish your keys. Soon, the app will attempt to detect when you need to do this to minimize the chance of lost funds, but for now you must do it manually. </li> <br /> <li> Unlike other applications, the security of funds received by Umbra is not protected by the standard Argent security model, and instead they are just protected by your private key. </li> </ol>",
+    "acknowledge-risks": "I acknowledge the risks"
+  },
+  "ConnectWalletCard": {
+    "connect-wallet": "Connect Wallet"
+  },
+  "WithdrawForm": {
+    "withdraw-address": "Enter address to withdraw funds to",
+    "address": "Address",
+    "fetching-fee-estimate": "Fetching fee estimate...",
+    "withdrawal-fee": "Withdrawal fee:",
+    "estimated-withdrawal-fee": "Estimated withdrawal fee:",
+    "withdraw-in-progress": "Withdraw in progress...",
+    "warning": " <span class=\"text-bold\">WARNING</span>: Be sure you understand the security implications before entering a withdrawal address. If you withdraw to an address publicly associated with you, privacy for this transaction will be lost.",
+    "learn-more": "Learn more",
+    "hide": "Hide",
+    "show": "Show",
+    "stealth-prv-key": "stealth address private key"
   }
 }
