Add Chinese translations to rest of the components

--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -39,68 +39,68 @@
     "links": "更多"
   },
   "Address-Settings": {
-    "advanced-mode-on": "Advanced mode is on"
+    "advanced-mode-on": "高级模式已开启"
   },
   "Contact": {
-    "contact": "Contact",
-    "paragraph": "Read the {0} and still have questions? Feel free to get in touch! You'll likely get the fastest response on Discord.",
-    "faq": "FAQ",
-    "discord": "{0} on Discord",
-    "join-us": "Join us",
-    "twitter": "{0} Umbra on Twitter",
-    "follow": "Follow",
-    "email": "Email us at {0}"
+    "contact": "联系",
+    "paragraph": "阅读{0}以后仍有疑问？请随时与我们联系！您可能会在 Discord 上获得最快的响应。.",
+    "faq": "常见问题",
+    "discord": "{0} Discord",
+    "join-us": "加入我们的",
+    "twitter": "在 Twitter 上{0} Umbra",
+    "follow": "跟随",
+    "email": "在 {0} 给我们发电子邮件"
   },
   "Send": {
-    "sending-disabled": "Sending via Umbra has been temporarily disabled while we perform system maintenance. Please check back soon!",
-    "send": "Send",
-    "connect-your-wallet": "Connect your wallet to send funds",
-    "connect-wallet": "Connect Wallet",
-    "recipient": "Recipient's ENS name or address",
-    "recipient-pkey": "Send using recipient's standard public key",
-    "question-circle": "When checked, the public key used will be the standard public for the provided Ethereum address. The receiver will have to enter their account's private key into this app to withdrawal the funds.",
-    "question-circle-warning": "Don't use this feature unless you know what you're doing.",
-    "learn-more": "Learn more",
-    "select-token": "Select token to send",
-    "token": "Token",
-    "amount": "Amount to send",
-    "summary": "Summary",
-    "sending": "Sending",
-    "fee": "Umbra Fee",
-    "fee-explain": "Transactions on %{chainName} are very cheap, so a small fee is charged to deter spamming the protocol.",
-    "copy-payment-link": "Copy payment link"
+    "sending-disabled": "在我们执行系统维护时，通过 Umbra 发送已暂时禁用。请稍后再回来查看！",
+    "send": "发送",
+    "connect-your-wallet": "连接您的钱包以发送资金",
+    "connect-wallet": "连接钱包",
+    "recipient": "收件人的 ENS 名称或地址",
+    "recipient-pkey": "使用收件人的标准公钥发送",
+    "question-circle": "选中后，使用的公钥将是提供的以太坊地址的标准公钥。接收者必须将其帐户的私钥输入此应用程序才能提取资金。",
+    "question-circle-warning": "除非您知道自己在做什么，不要使用此功能。",
+    "learn-more": "了解更多",
+    "select-token": "选择要发送的代币",
+    "token": "代币",
+    "amount": "汇款金额",
+    "summary": "总结",
+    "sending": "发送中",
+    "fee": "Umbra 费",
+    "fee-explain": "在 %{chainName} 上交易非常便宜，因此会收取少量费用以阻止垃圾信息。",
+    "copy-payment-link": "复制付款链接"
   },
   "Receive": {
-    "receive": "Receive",
-    "connect-your-wallet": "Connect your wallet to scan for received funds",
-    "connect-wallet": "Connect Wallet",
-    "need-signature": "This app needs your signature to scan for funds you've received",
-    "scan-funds": "Click below to scan for funds you've received",
-    "sign": "Sign",
-    "scan": "Scan",
-    "scan-settings": "Scan Settings",
-    "start-end": "Enter the start or end blocks to use when scanning for events. A blank start block will scan from block zero, and a blank end block will scan through the current block.",
-    "start-block": "Start block",
-    "end-block": "End block",
-    "enter-prv-key": "Enter the private key to use when scanning for events. A blank private key will use the ones generated from your signature.",
-    "prv-key": "Private key",
-    "fetching": "Fetching announcements...",
-    "scanning": "Scanning for funds...",
-    "wait": "This may take a couple of minutes depending on your connection and device. This is normal&mdash; please be patient."
+    "receive": "接收",
+    "connect-your-wallet": "连接您的钱包以扫描收到的资金",
+    "connect-wallet": "链接钱包",
+    "need-signature": "此应用程序需要您的签名才能扫描您收到的资金",
+    "scan-funds": "点击下方来扫描您收到的资金",
+    "sign": "签名",
+    "scan": "扫描",
+    "scan-settings": "扫描设置",
+    "start-end": "输入扫描事件时要使用的开始或结束块。空白起始块将从块零扫描，空白结束块将扫描到当前块。",
+    "start-block": "开始块",
+    "end-block": "结束块",
+    "enter-prv-key": "输入扫描事件时要使用的私钥。空白私钥将使用从您的签名生成的私钥。",
+    "prv-key": "私钥",
+    "fetching": "在获取公告...",
+    "scanning": "在扫描资金...",
+    "wait": "这可能需要几分钟，具体取决于您的连接和设备。这是正常的 — 请耐心等待。"
   },
   "Setup": {
-    "setup": "Setup",
-    "connect-wallet": "Connect your wallet to setup your account",
-    "generate-stealth": "Generate and Publish Stealth Keys",
-    "paragraph": " Use the button below to complete the setup process. This will result in two prompts from your wallet: <ol> <li> <span class=\"text-bold\">Sign a message</span> used to generate your Umbra-specific pair of private keys. These keys allow you to securely use Umbra without compromising the private keys of your connected wallet. You do not need to save these keys anywhere! </li> <li> <span class=\"text-bold\">Submit a transaction</span> to save the corresponding public keys on-chain, so anyone can use them to send you stealth payments. </li> </ol>",
-    "setup-account": "Setup account",
-    "complete": "Setup Complete!",
-    "return-to-home": "You may now return {0} to send or receive funds",
-    "return-home": "home"
+    "setup": "注册",
+    "connect-wallet": "连接您的钱包以注册您的帐户",
+    "generate-stealth": "生成和发布隐形密钥",
+    "paragraph": "使用下面的按钮完成注册过程。这将导致您的钱包出现两个提示： <ol> <li> <span class=\"text-bold\">签署消息</span> 用于生成特定于 Umbra 的私钥对。这些密钥允许您安全地使用Umbra，而不会影响已连接钱包的私钥。您无需将这些密钥保存在任何地方！ </li> <li> <span class=\"text-bold\">提交交易</span> 将相应的公钥保存在链上，以便任何人都可以使用它们向您发送隐形付款。 </li> </ol>",
+    "setup-account": "注册帐户",
+    "complete": "注册完成!",
+    "return-to-home": "您现在可以返回{0}发送或接收资金",
+    "return-home": "主页"
   },
   "Error": {
     "error": "404",
-    "error-msg": "Oops. Nothing here..."
+    "error-msg": "哎呀。这里什么都没有......"
   },
   "FAQ": {
     "faq": "常见问题",
@@ -205,81 +205,81 @@
     "hooks-answer-encoding-data": "编码数据",
     "hooks-answer-end": "<p> 这些就是您了解钩子所需的知识。有了钩子合约的地址和编码的调用数据，您就可以调用两个基于钩子的方法之一了。 </p>"
   },
-  "AccountRT": {
-    "processing-results": "Processing results...",
-    "configure-umbra": "You won't be able to receive funds until you've configured Umbra.",
-    "navigate-to-setup": "Please navigate to the {0} page and do so",
-    "setup": "Setup",
-    "keys-dont-match": "The stealth keys published for this account do not match those generated by it. Please navigate to the {0} page and complete the setup flow to ensure the keys published match this account. Failure to do so may result in payments sent to your account being difficult, or even impossible, to withdraw.",
-    "learn-more": "Learn more",
-    "scan-settings": "Change scan settings",
-    "account-empty": "This account has not received any funds",
-    "received-funds": "Received Funds",
-    "sender": "Sender",
-    "stealth-receiver": "Stealth Receiver",
-    "received": "Received",
-    "withdrawn": "Withdrawn",
-    "hide": "Hide",
-    "withdraw": "withdraw",
-    "receiver": "Receiver",
-    "scanning-complete": "Scanning completed successfully",
-    "custom-prv-key": " with custom private key",
-    "scanned-from-block": "Scanned from block",
-    "to": "to",
-    "all-blocks-scanned": "All blocks have been scanned",
-    "scanned-all-blocks-up-to": "Scanned all blocks up to",
-    "to-current-block": "to current block",
-    "private-key-copied": "Private key copied to clipboard",
-    "date-received": "Date Received",
-    "amount": "Amount",
-    "wallet-not-connected": "Wallet not connected. Try refreshing the page and connect your wallet",
-    "address-copied": "address copied to clipboard",
-    "umbra-instance-not-found": "Umbra instance not found",
-    "provider-not-found": "Provider not found",
-    "no-announcement-selected": "No announcement is selected for withdraw",
-    "signer-or-provider-not-found": "Signer or provider not found",
-    "fee-not-set": "Fee is not set",
-    "invalid-chain-id": "Invalid chainID",
-    "relayed-with-tx-hash": "Relayed with transaction hash",
-    "relayed-with-relayer-id": "Relayed with relayer ID",
-    "withdraw-succcessful-receipt": "Withdraw successful. Receipt:",
-    "receiver-tool-tip": "The stealth address which received these funds. It looks like an empty address, and it can't be tied to your account, but only you have the ability to generate its private key."
+  "AccountReceiveTable": {
+    "processing-results": "正在处理结果...",
+    "configure-umbra": "在注册 Umbra 之前，您将无法接收资金。",
+    "navigate-to-setup": "请导航到{0}页面来注册",
+    "setup": "注册",
+    "keys-dont-match": "为此帐户发布的隐形密钥与其生成的密钥不匹配。请导航到 {0} 页并完成注册流程，以确保发布的密钥与此帐户匹配。不然可能会导致发送到您帐户的付款难以提取，甚至无法提取。",
+    "learn-more": "了解更多",
+    "scan-settings": "更改扫描设置",
+    "account-empty": "此帐户尚未收到任何资金",
+    "received-funds": "收到的资金",
+    "sender": "发送者",
+    "stealth-receiver": "隐形接收者",
+    "received": "已收到",
+    "withdrawn": "已提取",
+    "hide": "隐藏",
+    "withdraw": "提取",
+    "receiver": "接受者",
+    "scanning-complete": "扫描已成功完成",
+    "custom-prv-key": "使用自定义私钥",
+    "scanned-from-block": "从此块扫描",
+    "to": "到",
+    "all-blocks-scanned": "所有块都已扫描",
+    "scanned-all-blocks-up-to": "扫描了所有块，直到",
+    "to-current-block": "当前块",
+    "private-key-copied": "私钥已复制到剪贴板",
+    "date-received": "收到日期",
+    "amount": "金额",
+    "wallet-not-connected": "钱包未连接。尝试刷新页面并连接您的钱包",
+    "address-copied": "地址已复制到剪贴板",
+    "umbra-instance-not-found": "未找到Umbra实例：Umbra instance not found",
+    "provider-not-found": "未找到提供程序：Provider not found",
+    "no-announcement-selected": "未选择提款公告：No announcement is selected for withdraw",
+    "signer-or-provider-not-found": "未找到签名者或提供程序：Signer or provider not found",
+    "fee-not-set": "费用未设置：Fee is not set",
+    "invalid-chain-id": "无效的链 ID：Invalid chainID",
+    "relayed-with-tx-hash": "使用事务哈希中继：Relayed with transaction hash",
+    "relayed-with-relayer-id": "使用中继器 ID 中继：Relayed with relayer ID",
+    "withdraw-succcessful-receipt": "取款成功。收据：",
+    "receiver-tool-tip": "收到这些资金的隐形地址看起来像是一个空地址。它不能被追随到您的帐户，但只有您有能力生成其私钥。"
   },
-  "AccountRTW": {
-    "withdrawal-warning": "You are withdrawing to {destinationAddr}, which has the following warnings:",
-    "withdrawal-warning-rest": "<span class=\"text-bold\">Continuing with withdrawal is not recommended</span> unless you know what you are doing, as this may reduce or entirely remove the privacy properties provided by Umbra.",
-    "learn-more": "Learn More"
+  "AccountReceiveTableWarning": {
+    "withdrawal-warning": "您正在提款到 {0} ，其中包含以下警告：",
+    "withdrawal-warning-rest": "<span class=\"text-bold\">程序不建议您继续提款</span>，除非您知道自己在做什么。因为这可能会减少或完全删除 Umbra 提供的隐私属性。",
+    "learn-more": "了解更多"
   },
-  "AccountRTWC": {
-    "confirm": "Confirm Withdrawal",
-    "to": "Withdrawing to",
-    "amount": "Amount",
-    "tx-fee": "Transaction Fee",
-    "relayer-gas-fee": "Relayer Gas Fee",
-    "you-will-receive": "You'll receive",
-    "cannot-withdraw": "Cannot withdraw, please correct fee error",
-    "withdraw-in-progress": "Withdraw in progress...",
-    "view-transaction": "View transaction"
+  "AccountReceiveTableWithdrawConfirmation": {
+    "confirm": "确认提款",
+    "to": "提取到",
+    "amount": "金额",
+    "tx-fee": "交易费",
+    "relayer-gas-fee": "中继器Gas费",
+    "you-will-receive": "您将收到",
+    "cannot-withdraw": "无法提现，请更正费用错误：Cannot withdraw, please correct fee error",
+    "withdraw-in-progress": "正在提款...",
+    "view-transaction": "查看交易"
   },
   "Argent": {
-    "warning": "Warning: Argent Compatibility Issues",
-    "warning-paragraph": "<p class=\"text-bold\"> Umbra is not compatible with Argent's standard security model. While you can still use Umbra with Argent, you are at risk of losing funds if you switch devices or have to rely on social recovery without first withdrawing any funds sent to you via Umbra. </p> <p> Umbra works by generating app-specific keys derived from your wallet's private key. Argent is unique in that its security does not rely on your private key. This is good in many ways. </p> <p>When using Umbra, however, you must be aware of the following:</p> <ol> <li> If you recover your Argent wallet onto a new device, the new wallet will have the same address but a different private key. Unless you have access to the old device, funds sent via Umbra that you have not withdrawn will become unrecoverable. </li> <br /> <li> As a result, when you get a new device, you should withdraw all funds first using your old device, then repeat the Umbra account setup and re-publish your keys. Soon, the app will attempt to detect when you need to do this to minimize the chance of lost funds, but for now you must do it manually. </li> <br /> <li> Unlike other applications, the security of funds received by Umbra is not protected by the standard Argent security model, and instead they are just protected by your private key. </li> </ol>",
-    "acknowledge-risks": "I acknowledge the risks"
+    "warning": "警告：Argent兼容性问题： Warning: Argent Compatibility Issues",
+    "warning-paragraph": "<p class=\"text-bold\"> Umbra 与 Argent 的标准安全模型不兼容。虽然您仍然可以将 Umbra 与 Argent 一起使用，但如果您切换设备或必须依靠社交恢复而不首先提取通过Umbra发送给您的任何资金，则您将面临损失资金的风险。 </p> <p> Umbra 的工作原理是从钱包的私钥派生出特定于应用程序的密钥。Argent的独特之处在于其安全性不依赖于您的私钥。这在很多方面都是好的。 </p> <p>但是，在使用 Umbra 时，必须注意以下事项：</p> <ol> <li> 如果您将Argent钱包恢复到新设备上，则新钱包将具有相同的地址，但具有不同的私钥。除非您有权访问旧设备，否则通过Umbra发送的您尚未提取的资金将无法恢复。 </li> <br /> <li> 因此，当您获得新设备时，您应该首先使用旧设备提取所有资金，然后重复Umbra帐户注册并重新发布密钥。很快，该应用程序将尝试检测何时需要执行此操作，以最大程度地减少资金损失的可能性，但现在您必须手动执行此操作。 </li> <br /> <li> 与其他应用程序不同，Umbra 接收的资金的安全性不受标准 Argent 安全模型的保护，而只是受您的私钥保护。 </li> </ol>",
+    "acknowledge-risks": "我承认此操作有风险"
   },
   "ConnectWalletCard": {
-    "connect-wallet": "Connect Wallet"
+    "connect-wallet": "连接钱包"
   },
   "WithdrawForm": {
-    "withdraw-address": "Enter address to withdraw funds to",
-    "address": "Address",
-    "fetching-fee-estimate": "Fetching fee estimate...",
-    "withdrawal-fee": "Withdrawal fee:",
-    "estimated-withdrawal-fee": "Estimated withdrawal fee:",
-    "withdraw-in-progress": "Withdraw in progress...",
-    "warning": " <span class=\"text-bold\">WARNING</span>: Be sure you understand the security implications before entering a withdrawal address. If you withdraw to an address publicly associated with you, privacy for this transaction will be lost.",
-    "learn-more": "Learn more",
-    "hide": "Hide",
-    "show": "Show",
-    "stealth-prv-key": "stealth address private key"
+    "withdraw-address": "输入提取资金的地址",
+    "address": "地址",
+    "fetching-fee-estimate": "在接收费用估计...",
+    "withdrawal-fee": "提款费：",
+    "estimated-withdrawal-fee": "预计提款费用：",
+    "withdraw-in-progress": "正在提款......",
+    "warning": " <span class=\"text-bold\">警告</span>: 在输入提款地址之前，请确保您了解安全隐患。如果您提款到与您公开关联的地址，则此交易的隐私将丢失。",
+    "learn-more": "了解更多",
+    "hide": "隐藏",
+    "show": "显示",
+    "stealth-prv-key": "隐形地址私钥"
   }
 }
