Update language selector

--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -47,7 +47,7 @@
     "faq": "常见问题",
     "discord": "{0} Discord",
     "join-us": "加入我们的",
-    "twitter": "在 Twitter 上{0} Umbra",
+    "twitter": "在 Twitter {0} Umbra",
     "follow": "跟随",
     "email": "在 {0} 给我们发电子邮件"
   },
