chore: capitalize a word

--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -227,7 +227,7 @@
     "received": "Received",
     "withdrawn": "Withdrawn",
     "hide": "Hide",
-    "withdraw": "withdraw",
+    "withdraw": "Withdraw",
     "receiver": "Receiver",
     "scanning-complete": "Scanning completed successfully",
     "custom-prv-key": " with custom private key",
