--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -72,7 +72,7 @@
     "max": "最大限度",
     "copy-payment-link": "复制付款链接",
     "enter-an-amount": "请输入金额",
-    "enter-a-recipient": "请输入收件人",
+    "enter-a-recipient": "请输入收款人",
     "select-a-token": "请选择代币",
     "send-at-least": "请最少发送",
     "amount-exceeds-balance": "钱包金额不足",
