chore: fix translation

--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -69,7 +69,7 @@
     "fee": "Umbra 费",
     "fee-explain": "在 %{chainName} 上交易非常便宜，因此会收取少量费用以阻止垃圾信息。",
     "total": "总额",
-    "max": "最大限度",
+    "max": "最大限额",
     "copy-payment-link": "复制付款链接",
     "enter-an-amount": "请输入金额",
     "enter-a-recipient": "请输入收款人",
