--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -69,8 +69,10 @@
     "fee": "Umbra Fee",
     "fee-explain": "Transactions on %{chainName} are very cheap, so a small fee is charged to deter spamming the protocol.",
     "total": "Total",
+    "max": "Max",
     "copy-payment-link": "Copy payment link",
     "enter-an-amount": "Please enter an amount",
+    "enter-a-recipient": "Please enter a recipient",
     "select-a-token": "Please select a token",
     "send-at-least": "Please send at least",
     "amount-exceeds-balance": "Amount exceeds wallet balance",
